--- a/doc/li120914.bib
+++ b/doc/li120914.bib
@@ -28,6 +28,22 @@ year= 1967}
   publisher = {American Physical Society}
 }
 
+@article{haverkort10-167404,
+author={M Havekort},
+year=2010,
+pages=167404,
+journal={Phys. Rev. Lett.}
+}
+
+@article{shiina97-1741,
+author={R Shiina and H. Shiba and P. Thalmeier},
+volumne=66,
+number=6,
+year=1997,
+pages=1741,
+journal={J. Phys. Soc. Jpn.}
+}
+
 @article{rotter11-12008,
   author={M Rotter and B Fåk and J A Blanco},
   title={Magnetic excitations in the longitudinally amplitude modulated magnetic structure of PrNi 2 Si 2},
