bug in spins removed

--- a/doc/extsimod.tex
+++ b/doc/extsimod.tex
@@ -481,7 +481,7 @@ and return them as
 a vector $\mbf I$. Input file parameters params are supplied as a vector MODPAR and
 Lande factor as gJ and  can be used for this purpose. The Hamiltonian
 is usually assumed to be of the general form
- $H=H_0- \mbf M \mbf H_ext - I_a {\rm Hxc}(1) -I_b {\rm Hxc}(2) -I_c {\rm Hxc}(3) 
+ $H=H_0- \mbf M \mbf H_{ext} - I_a {\rm Hxc}(1) -I_b {\rm Hxc}(2) -I_c {\rm Hxc}(3) 
 -I_d {\rm Hxc}(4) ...$.
 \item the natural logarithm of the partition sum Z should be calculated and returned as lnZ,
 $Z=\sum_i e^{-E_i/kT}$
